--- a/cities.html
+++ b/cities.html
@@ -22,12 +22,13 @@
   <hr/>
 
   <ol>
-    <li>lethbrid (100, 100, 100)</li>
+    <li>lethbridge (100, 100, 100)</li>
     <li>Shanghai (17,836,133)</li>
     <li>Istanbul (13,854,740)</li>
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>Vancouver</li>
+
   </ol>
 
 </body>
